--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt=Dog><!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 
